fixes size of image on mobile devices and larger devices to look right

--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ a {
 
 a:hover {
   color: #9668A0;
-   border-bottom: 1px solid; 
+   border-bottom: 1px solid;
 }
 
 .app-store,
@@ -99,8 +99,8 @@ header img {
 
 .iphone {
   display: block;
-  max-height: 744px;
-  max-width: 396px;
+  max-height: 636px;
+  max-width: 311px;
   padding-bottom: 0%;
   margin-left: auto;
   margin-right: auto;
@@ -245,13 +245,17 @@ body.privacy {
 
 /* Mobile */
 
-@media (max-width: 540px) {
+@media (max-width: 750px) {
 
   /*#main h1 {
     margin-top: 0em;
     text-align: center;
     width: 100%;
   }*/
+
+  .iphone {
+      width: 80%;
+  }
 
   /*div.iphone img {
     display: block;
